--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry output="target\scala-2.11\classes" path="src\main\scala" kind="src"></classpathentry>
-  <classpathentry output="target\scala-2.11\classes" path="src\main\java" kind="src"></classpathentry>
-  <classpathentry output="target\scala-2.11\test-classes" path="src\test\scala" kind="src"></classpathentry>
-  <classpathentry output="target\scala-2.11\test-classes" path="src\test\java" kind="src"></classpathentry>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"></classpathentry>
-  <classpathentry path="C:\Users\rdoyle\.ivy2\cache\com.typesafe.akka\akka-actor_2.11\jars\akka-actor_2.11-2.3.4.jar" kind="lib"></classpathentry>
-  <classpathentry path="C:\Users\rdoyle\.ivy2\cache\com.typesafe\config\bundles\config-1.2.1.jar" kind="lib"></classpathentry>
-  <classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"></classpathentry>
-  <classpathentry path="bin" kind="output"></classpathentry>
+	<classpathentry kind="src" output="target/scala-2.11/classes" path="src/main/scala"/>
+	<classpathentry kind="src" output="target/scala-2.11/classes" path="src/main/java"/>
+	<classpathentry kind="src" output="target/scala-2.11/test-classes" path="src/test/scala"/>
+	<classpathentry kind="src" output="target/scala-2.11/test-classes" path="src/test/java"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/rdoyle/.ivy2/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rdoyle/.ivy2/cache/com.typesafe/config/bundles/config-1.2.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
