--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,16 @@
-swing-dispatcher {
-  type = "Dispatcher"
-  executor = "org.bohdi.mandelbrot.SwingEventThreadExecutorServiceConfigurator"
-  throughput = 1
+mandelbrot{
+  swing-dispatcher {
+    type = "Dispatcher"
+    executor = "org.bohdi.mandelbrot.SwingEventThreadExecutorServiceConfigurator"
+    throughput = 1
+  }
+
+  gui {
+    width = 500
+    height = 400
+    views = 4
+  }
+
+  workers = 8
+  maxIterations = 100
 }
